<resources>
    <string name="app_name">Cantina Memo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="orar">Orar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course">Curs</string>
    <string name="undefined_type">Tip nedefinit</string>
    <string name="seminar">Seminar</string>
    <string name="laboratory">Laborator</string>
    <string name="location">Location</string>
    <string name="schedule">Orar</string>
    <string name="type_event">Tip</string>
    <string name="event_participants">Mai participa si:</string>
    <string name="menu_canteen">Meniu</string>
    <string name="menu_canteen_large">Meniu cantina</string>
    <string name="luni">Luni</string>
    <string name="marti">Marti</string>
    <string name="miercuri">miercuri</string>
    <string name="joi">Joi</string>
    <string name="vineri">Vineri</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Nume si Prenume</string>
    <string name="pref_default_display_name">FLorin Patulea</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications_orar">Notificare actualizare orar</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="queue_problem">A aparut o problema!</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_settings">Setari</string>
    <string name="pref_title_new_message_notifications_news">Notificare anunturi</string>
    <string name="configurare_grupa">Configurare grupa</string>
    <string name="configurare_grupa_subtitle">Touch to configure</string>
    <string name="configurare_name">Nume</string>
    <string name="default_user_name">Anonim</string>
    <string name="receive_news_notifications">Primeste notificare anunturi</string>
    <string name="year">Anul</string>
    <string name="spec">Specializarea</string>
    <string name="grupa">Grupa</string>
    <string name="semigrupa">Semigrupa</string>
    <string name="save">Save</string>
    <string name="users_settings">Setarile utilizatorului</string>
    <string name="cannot_get_schedule">Error get schedule.</string>
    <string name="city_name">Brasov</string>
    <string name="title_activity_dish">DishActivity</string>
    <string name="price_dish">Pret</string>
    <string name="dish_description">Descriere:</string>
    <string name="dish_grammage">Gramaj</string>
    <string name="event_teacher">Profesor:</string>
    <string name="item_added">Am adaugat acest item in cosul tau.</string>
    <string name="queue_thanks">Multumim pentru contributie!</string>
    <string name="view_cart">Vezi cosul</string>
    <string name="action_cart">Cos de cumparaturi</string>
    <string name="clean_cart">Sterge cosul</string>
    <string name="cart_title">Cos de cumparaturi</string>
    <string name="error_get_menu">In acest moment nu putem prelua meniul. Va rugam sa incercati mai tarziu!</string>
    <string name="cannot_load_dish">Nu putem afisa acest fel de mancare. Va rugam incercati mai tarziu!</string>
    <string name="dish_categories">Categorie:</string>
    <string name="select_categories">Selectati categoriile filtrului</string>
    <string name="select_cats_save">Salveaza</string>
    <string name="filter">Filter</string>
    <string name="error_filter_categories">A aparut o eroare neasteptata. Va rugam incercati mai tarziu!</string>
    <string name="cart_deleted">Am sters produsele din cosul dumneavoastra!</string>
    <string name="cart_preference_file_key">cart_preferences</string>
    <string name="coada_cantina">Coadă cantină</string>
    <string name="update_menu_socket_io">Meniul a fost actualizat automat!</string>
    <string name="feedback_menu_title">Send us feedback!</string>
    <string name="send_feedback_email_subject">Feedback</string>
    <string name="send_feedback_intent_title">Send feedback via...</string>
    <string name="feedback_error_no_email_client">No email client installed!</string>
</resources>
