<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:text="@string/users_settings"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">
            <TextView
                android:text="@string/year"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/year_spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:text="@string/spec"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/spec_spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:text="@string/grupa"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/grupa_spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:text="@string/semigrupa"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/sgr_spinner"/>

        </LinearLayout>
</LinearLayout>
</android.support.v7.widget.CardView>