<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:elevation="4dp"
                app:contentScrim="?attr/colorPrimary">

                <ImageView
                    android:id="@+id/imageview_dish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/imageview_dish"
                    android:background="@color/dish_title_bg"
                    app:layout_collapseMode="pin"/>


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="14dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="30dp"
                            android:paddingBottom="20dp"
                            android:orientation="vertical"
                            android:paddingLeft="28dp"
                            android:paddingRight="28dp">

                            <TextView
                                android:text="@string/price_dish"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="@dimen/event_title_field_size" />
                            <TextView
                                android:id="@+id/dish_price"
                                android:text="15lei"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/event_field_size" />


                            <TextView
                                android:text="@string/dish_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:layout_marginTop="10dp"
                                android:textSize="@dimen/event_title_field_size"/>
                            <TextView
                                android:id="@+id/dish_description"
                                android:text="marar, usturoi, ceapa"
                                android:layout_width="match_parent"
                                android:textSize="@dimen/event_field_size"
                                android:layout_height="wrap_content" />



                            <TextView
                                android:text="@string/dish_grammage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:layout_marginTop="10dp"
                                android:textSize="@dimen/event_title_field_size"/>
                            <TextView
                                android:id="@+id/dish_grammage"
                                android:text="200g"
                                android:layout_width="match_parent"
                                android:textSize="@dimen/event_field_size"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:text="@string/dish_categories"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:layout_marginTop="10dp"
                                android:textSize="@dimen/event_title_field_size"/>
                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/dish_categories"
                                android:orientation="horizontal"
                                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />


                        </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add_shopping_cart"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|right|end"/>

    </android.support.design.widget.CoordinatorLayout>


